// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendTransaction View renders correctly 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderRadius": 2,
                        "height": 40,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 40,
                      },
                      {
                        "marginHorizontal": 16,
                      },
                    ]
                  }
                  testID="button-icon"
                >
                  <SvgMock
                    fill="currentColor"
                    name="ArrowLeft"
                    style={
                      [
                        {
                          "color": "#121314",
                          "height": 24,
                          "width": 24,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Sell crypto
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={2}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "additive",
                          "right": "additive",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "flex": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                  "paddingHorizontal": 16,
                                },
                                {
                                  "flex": 1,
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "flexDirection": "row",
                                      "gap": 4,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Send
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Bold",
                                        "fontSize": 18,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    0.012361263
                                  </Text>
                                  <View
                                    style={
                                      {
                                        "backgroundColor": "#ffffff",
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      }
                                    }
                                  >
                                    <Image
                                      onError={[Function]}
                                      resizeMode="contain"
                                      source={1}
                                      style={
                                        {
                                          "flex": 1,
                                          "height": undefined,
                                          "width": undefined,
                                        }
                                      }
                                      testID="token-avatar-image"
                                    />
                                  </View>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Bold",
                                        "fontSize": 18,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    ETH
                                  </Text>
                                </View>
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#686e7d"
                                  fill="currentColor"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  source={
                                    {
                                      "uri": "https://on-ramp.dev-api.cx.metamask.io/assets/providers/test_light.png",
                                    }
                                  }
                                  style={
                                    {
                                      "height": 24,
                                      "width": 65,
                                    }
                                  }
                                />
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#686e7d"
                                  fill="currentColor"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "columnGap": 4,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                    }
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    selectable={false}
                                    style={
                                      [
                                        {
                                          "color": "#686e7d",
                                          "fontSize": 20,
                                        },
                                        undefined,
                                        {
                                          "fontFamily": "Material Design Icons",
                                          "fontStyle": "normal",
                                          "fontWeight": "normal",
                                        },
                                        {},
                                      ]
                                    }
                                  >
                                    󰁰
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Instant Bank Transfer
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View>
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                  "paddingHorizontal": 16,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                [
                                  {
                                    "marginVertical": 8,
                                  },
                                  {
                                    "marginTop": 0,
                                  },
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                You will send your ETH to Test (Staging), who then sends your cash to Instant Bank Transfer
                              </Text>
                            </View>
                            <View
                              style={
                                [
                                  {
                                    "marginVertical": 8,
                                  },
                                  undefined,
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <TouchableOpacity
                                accessibilityRole="button"
                                accessible={true}
                                activeOpacity={1}
                                disabled={false}
                                onPress={[Function]}
                                onPressIn={[Function]}
                                onPressOut={[Function]}
                                style={
                                  {
                                    "alignItems": "center",
                                    "alignSelf": "stretch",
                                    "backgroundColor": "#121314",
                                    "borderRadius": 12,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "overflow": "hidden",
                                    "paddingHorizontal": 16,
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#ffffff",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 18,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  Next
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`SendTransaction View renders correctly for custom action payment method 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderRadius": 2,
                        "height": 40,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 40,
                      },
                      {
                        "marginHorizontal": 16,
                      },
                    ]
                  }
                  testID="button-icon"
                >
                  <SvgMock
                    fill="currentColor"
                    name="ArrowLeft"
                    style={
                      [
                        {
                          "color": "#121314",
                          "height": 24,
                          "width": 24,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Sell crypto
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={5}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "additive",
                          "right": "additive",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "flex": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                  "paddingHorizontal": 16,
                                },
                                {
                                  "flex": 1,
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "flexDirection": "row",
                                      "gap": 4,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Send
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Bold",
                                        "fontSize": 18,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    0.0123456
                                  </Text>
                                  <View
                                    style={
                                      {
                                        "backgroundColor": "#ffffff",
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      }
                                    }
                                  >
                                    <Image
                                      onError={[Function]}
                                      resizeMode="contain"
                                      source={
                                        {
                                          "uri": "https://token.api.cx.metamask.io/assets/nativeCurrencyLogos/usdc.png",
                                        }
                                      }
                                      style={
                                        {
                                          "flex": 1,
                                          "height": undefined,
                                          "width": undefined,
                                        }
                                      }
                                      testID="token-avatar-image"
                                    />
                                  </View>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Bold",
                                        "fontSize": 18,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    USDC
                                  </Text>
                                </View>
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#686e7d"
                                  fill="currentColor"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  source={
                                    {
                                      "uri": "https://on-ramp.dev-api.cx.metamask.io/assets/providers/test_light.png",
                                    }
                                  }
                                  style={
                                    {
                                      "height": 24,
                                      "width": 65,
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                        <View>
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                  "paddingHorizontal": 16,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                [
                                  {
                                    "marginVertical": 8,
                                  },
                                  {
                                    "marginTop": 0,
                                  },
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                You will send your USDC to Test (Staging), who then sends your cash to Instant Bank Transfer
                              </Text>
                            </View>
                            <View
                              style={
                                [
                                  {
                                    "marginVertical": 8,
                                  },
                                  undefined,
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <TouchableOpacity
                                accessibilityRole="button"
                                accessible={true}
                                activeOpacity={1}
                                disabled={false}
                                onPress={[Function]}
                                onPressIn={[Function]}
                                onPressOut={[Function]}
                                style={
                                  {
                                    "alignItems": "center",
                                    "alignSelf": "stretch",
                                    "backgroundColor": "#121314",
                                    "borderRadius": 12,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "overflow": "hidden",
                                    "paddingHorizontal": 16,
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#ffffff",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 18,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  Next
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;

exports[`SendTransaction View renders correctly for token 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      collapsable={false}
      pointerEvents="box-none"
      style={
        {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "backgroundColor": "#ffffff",
                "borderBottomColor": "rgb(216, 216, 216)",
                "elevation": 0,
                "flex": 1,
                "shadowColor": "rgb(216, 216, 216)",
                "shadowOffset": {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          collapsable={false}
          pointerEvents="box-none"
          style={
            {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "flex-start",
                  "bottom": 0,
                  "justifyContent": "center",
                  "left": 0,
                  "opacity": 1,
                  "position": "absolute",
                  "top": 0,
                }
              }
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "scale": 1,
                        },
                      ],
                    },
                    {
                      "alignItems": "center",
                      "justifyContent": "center",
                    },
                  ]
                }
              >
                <View
                  accessibilityState={
                    {
                      "busy": undefined,
                      "checked": undefined,
                      "disabled": false,
                      "expanded": undefined,
                      "selected": undefined,
                    }
                  }
                  accessibilityValue={
                    {
                      "max": undefined,
                      "min": undefined,
                      "now": undefined,
                      "text": undefined,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    [
                      {
                        "alignItems": "center",
                        "backgroundColor": "transparent",
                        "borderRadius": 2,
                        "height": 40,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 40,
                      },
                      {
                        "marginHorizontal": 16,
                      },
                    ]
                  }
                  testID="button-icon"
                >
                  <SvgMock
                    fill="currentColor"
                    name="ArrowLeft"
                    style={
                      [
                        {
                          "color": "#121314",
                          "height": 24,
                          "width": 24,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
              </View>
            </View>
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "marginHorizontal": 72,
                  "opacity": 1,
                }
              }
            >
              <TouchableOpacity
                activeOpacity={1}
                onPress={[Function]}
                style={
                  {
                    "alignItems": "center",
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  accessibilityRole="text"
                  numberOfLines={1}
                  style={
                    {
                      "color": "#121314",
                      "fontFamily": "Geist Bold",
                      "fontSize": 16,
                      "letterSpacing": 0,
                      "lineHeight": 24,
                    }
                  }
                >
                  Sell crypto
                </Text>
              </TouchableOpacity>
            </View>
          </View>
        </View>
      </View>
    </View>
    <RNSScreenContainer
      onLayout={[Function]}
      style={
        {
          "flex": 1,
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        onGestureCancel={[Function]}
        pointerEvents="box-none"
        sheetAllowedDetents="large"
        sheetCornerRadius={-1}
        sheetExpandsWhenScrolledToEdge={true}
        sheetGrabberVisible={false}
        sheetLargestUndimmedDetent="all"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": undefined,
          }
        }
      >
        <View
          collapsable={false}
          style={
            {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            [
              {
                "overflow": undefined,
              },
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            {
              "close": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": {
                "animation": "spring",
                "config": {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            collapsable={false}
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              enabled={false}
              handlerTag={4}
              handlerType="PanGestureHandler"
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                {
                  "flex": 1,
                  "transform": [
                    {
                      "translateX": 0,
                    },
                    {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="none"
                style={
                  {
                    "backgroundColor": "rgb(242, 242, 242)",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  [
                    {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    [
                      {
                        "backgroundColor": "rgb(242, 242, 242)",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                      }
                    }
                  >
                    <RNCSafeAreaView
                      edges={
                        {
                          "bottom": "additive",
                          "left": "additive",
                          "right": "additive",
                          "top": "off",
                        }
                      }
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          [
                            {
                              "backgroundColor": "#ffffff",
                              "flex": 1,
                            },
                            undefined,
                          ]
                        }
                      >
                        <View
                          style={
                            [
                              {
                                "flex": 1,
                              },
                              undefined,
                            ]
                          }
                        >
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                  "paddingHorizontal": 16,
                                },
                                {
                                  "flex": 1,
                                },
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                {
                                  "alignItems": "center",
                                  "flex": 1,
                                  "justifyContent": "center",
                                }
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "flexDirection": "row",
                                      "gap": 4,
                                    }
                                  }
                                >
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Send
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Bold",
                                        "fontSize": 18,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    0.0123456
                                  </Text>
                                  <View
                                    style={
                                      {
                                        "backgroundColor": "#ffffff",
                                        "borderRadius": 12,
                                        "height": 24,
                                        "overflow": "hidden",
                                        "width": 24,
                                      }
                                    }
                                  >
                                    <Image
                                      onError={[Function]}
                                      resizeMode="contain"
                                      source={
                                        {
                                          "uri": "https://token.api.cx.metamask.io/assets/nativeCurrencyLogos/usdc.png",
                                        }
                                      }
                                      style={
                                        {
                                          "flex": 1,
                                          "height": undefined,
                                          "width": undefined,
                                        }
                                      }
                                      testID="token-avatar-image"
                                    />
                                  </View>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Bold",
                                        "fontSize": 18,
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    USDC
                                  </Text>
                                </View>
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#686e7d"
                                  fill="currentColor"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  source={
                                    {
                                      "uri": "https://on-ramp.dev-api.cx.metamask.io/assets/providers/test_light.png",
                                    }
                                  }
                                  style={
                                    {
                                      "height": 24,
                                      "width": 65,
                                    }
                                  }
                                />
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <SvgMock
                                  color="#686e7d"
                                  fill="currentColor"
                                  height={24}
                                  name="Arrow2Down"
                                  style={
                                    {
                                      "height": 24,
                                      "width": 24,
                                    }
                                  }
                                  width={24}
                                />
                              </View>
                              <View
                                style={
                                  [
                                    {
                                      "marginVertical": 8,
                                    },
                                    undefined,
                                    undefined,
                                    undefined,
                                  ]
                                }
                              >
                                <View
                                  style={
                                    {
                                      "alignItems": "center",
                                      "columnGap": 4,
                                      "flexDirection": "row",
                                      "justifyContent": "center",
                                    }
                                  }
                                >
                                  <Text
                                    allowFontScaling={false}
                                    selectable={false}
                                    style={
                                      [
                                        {
                                          "color": "#686e7d",
                                          "fontSize": 20,
                                        },
                                        undefined,
                                        {
                                          "fontFamily": "Material Design Icons",
                                          "fontStyle": "normal",
                                          "fontWeight": "normal",
                                        },
                                        {},
                                      ]
                                    }
                                  >
                                    󰁰
                                  </Text>
                                  <Text
                                    accessibilityRole="text"
                                    style={
                                      {
                                        "color": "#121314",
                                        "fontFamily": "Geist Regular",
                                        "fontSize": 18,
                                        "fontWeight": "normal",
                                        "letterSpacing": 0,
                                        "lineHeight": 24,
                                      }
                                    }
                                  >
                                    Instant Bank Transfer
                                  </Text>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                        <View>
                          <View
                            style={
                              [
                                {
                                  "padding": 15,
                                  "paddingHorizontal": 16,
                                },
                                undefined,
                                undefined,
                              ]
                            }
                          >
                            <View
                              style={
                                [
                                  {
                                    "marginVertical": 8,
                                  },
                                  {
                                    "marginTop": 0,
                                  },
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <Text
                                accessibilityRole="text"
                                style={
                                  {
                                    "color": "#121314",
                                    "fontFamily": "Geist Regular",
                                    "fontSize": 16,
                                    "letterSpacing": 0,
                                    "lineHeight": 24,
                                    "textAlign": "center",
                                  }
                                }
                              >
                                You will send your USDC to Test (Staging), who then sends your cash to Instant Bank Transfer
                              </Text>
                            </View>
                            <View
                              style={
                                [
                                  {
                                    "marginVertical": 8,
                                  },
                                  undefined,
                                  undefined,
                                  undefined,
                                ]
                              }
                            >
                              <TouchableOpacity
                                accessibilityRole="button"
                                accessible={true}
                                activeOpacity={1}
                                disabled={false}
                                onPress={[Function]}
                                onPressIn={[Function]}
                                onPressOut={[Function]}
                                style={
                                  {
                                    "alignItems": "center",
                                    "alignSelf": "stretch",
                                    "backgroundColor": "#121314",
                                    "borderRadius": 12,
                                    "flexDirection": "row",
                                    "height": 48,
                                    "justifyContent": "center",
                                    "overflow": "hidden",
                                    "paddingHorizontal": 16,
                                  }
                                }
                              >
                                <Text
                                  accessibilityRole="text"
                                  style={
                                    {
                                      "color": "#ffffff",
                                      "fontFamily": "Geist Medium",
                                      "fontSize": 18,
                                      "letterSpacing": 0,
                                      "lineHeight": 24,
                                    }
                                  }
                                >
                                  Next
                                </Text>
                              </TouchableOpacity>
                            </View>
                          </View>
                        </View>
                      </View>
                    </RNCSafeAreaView>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenContainer>
  </RNCSafeAreaProvider>
</View>
`;
